# point

./: .coverage-thresholds.json  .dockerignore  .env.example  .env.production.example  .eslintrc.json  .gitignore  .pyre_configuration  AGENTS.md.bak  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile  GEMINI.md  LICENSE  MIGRATION_PLAN_GO.md  MIGRATION_PROGRESS.md  PHASE-13-SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  SECURITY.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  extract_measures.py  extract_tokens.py  full-coverage-reorganizer.skill  issues_list.txt  package-lock.json  package.json  patch_registry.patch  phases.md  pyproject.toml  pyrightconfig.json  rebuild.sh  requirements.txt  (+5 more)
.beads/: config.yaml  metadata.json
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.metaswarm/: external-tools.yaml  knowledge-base.md  project-profile.json
api/: .golangci.yml  README.md  data.yml  fix.py  go.mod  go.sum  refactor.py  sqlc.yaml
app/: config.py  database.py  dependencies.py  logging.py  main.py
docs/: DEPLOYMENT.md  IMPLEMENTATION-COMPLETE.md  META-TAGGING.md  MIGRATION_PROGRESS.md  README.md  TOAST_NOTIFICATIONS.md  features.md  hidden-visibility.md  instagram_import_proposal.md  mcp_proposal.md  phases.md  plugin-system_implementation-progress.md  plugin-system_proposal.md  slideshow_proposal.md  specification.md  tag-graph_proposal.md  testing.md  troubleshooting.md  usages.md  vendors.md
frontend/: index.html  manifest.webmanifest  sw.js
go-api/: README.md  coverage.html  coverage.out  go.mod  go.sum
landing/: index.html
nginx/: README.md  nginx.conf
quickstart/: .env.example  docker-compose.yml  install.sh  uninstall.sh  update.sh
scripts/: README.md  SETUP-PRODUCTION.md  add_featured_tag_column.py  add_hidden_tags_columns.py  add_tag_breadcrumbs_column.py  backup-config.sh.example  backup-from-local.sh  backup.sh  build-css.sh  build-js.sh  build-plugin-manifest.mjs  check.sh  check_posts.py  deploy-image.sh  deploy.sh  entrypoint.sh  init_db.py  lint.sh  point-backup.service  point-backup.timer  point-external-backup.sh  pull-from-production.sh  push-to-production.sh  rebuild.sh  restore-to-local.sh  restore.sh  run-local.sh  run-remark42-local.sh  run-tests.sh  run.sh  setup-point-backup.sh  setup-production.sh  stress-http.sh  stress-measure.sh  stress-results.md  test-production-access.sh  test_api.py  tests-go.sh  tests.sh  verify-deployment.sh  (+1 more)
tests/: AUTH_COVERAGE_DETAIL.md  README.md  REORGANIZATION_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_PROGRESS.md  conftest.py  reproduce_issue.py  test_additional_coverage.py  test_ajax_pagination.py  test_database_scheduler.py  test_db_main_coverage.py  (+3 more)
(+939 files in other folders)
